--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         versionCode 77
         versionName "7.1.1"
 
-        applicationId "org.digitalcampus.mobile.learning"
+        applicationId "net.mesau.sierraleone.oppiamobile"
 
         minSdkVersion 21
         targetSdkVersion 29
